# dagger

./: CMakeLists.txt  README.md  SPEC_IMPLEMENTATION_CHECKLIST.md  prompt.md  spec.md  test  test.s  test_extern  test_extern.s
src/: ast.h  codegen.cpp  codegen.h  driver.cpp  driver.h  lexer.cpp  lexer.h  lowering.cpp  lowering.h  main.cpp  parser.cpp  parser.h  regalloc.cpp  regalloc.h  runtime.cpp  runtime.h  runtime.s  semantics.cpp  semantics.h  sir.cpp  sir.h  stdlib.cpp  stdlib.h  token.h  types.h
stdlib/std/: math.dag  text.dag
tests/: cpp_tests.cpp  dag_tests.cpp
tests/programs/: factorial.dag  hello.dag  loop_sum.dag  modern_aliases.dag  module_local.dag  module_stdlib.dag  module_stdtext.dag  multi_input.dag  nested_shapes.dag  nested_shapes.out  reroute_capture.dag  shapes_fields.dag  test_extern.dag  test_sir.dag
tests/programs/modules/: local_math.dag
vscode-dagger/: LICENSE  README.md  dagger-language-0.0.1.vsix  language-configuration.json  package-lock.json  package.json
vscode-dagger/syntaxes/: dagger.tmLanguage.json
